# spate

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.devcontainer/: devcontainer.json
spate/: Cargo.toml
spate-bencode/: Cargo.toml
spate-bencode/src/: bencode.rs  deserializer.rs  lib.rs  serializer.rs
spate-metainfo/: Cargo.toml
spate-metainfo/src/: lib.rs
spate/src/: main.rs
