[package]
name = "spate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
spate-bencode = { path = "../spate-bencode" }
spate-metainfo = { path = "../spate-metainfo" }
